--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.1.0",
+        "@types/leaflet": "^1.9.20",
         "@types/three": "^0.180.0",
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "laravel-vite-plugin": "^2.0.0",
+        "leaflet": "^1.9.4",
+        "leaflet-geometryutil": "^0.10.3",
         "lucide-vue-next": "^0.468.0",
         "phaser": "^3.90.0",
         "reka-ui": "^2.4.1",
@@ -42,7 +45,8 @@
         "tailwindcss": "^4.1.1",
         "three": "^0.180.0",
         "tw-animate-css": "^1.2.5",
-        "vue": "^3.5.13"
+        "vue": "^3.5.13",
+        "vue-leaflet": "^0.1.0"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
